--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,28 +1,84 @@
 header {
   width: 100%;
   display: flex;
-  position: relative;
-  padding: 20px 30px;
+  justify-content: space-between;
+  position:fixed;
+  top: 0;
+  left: 0;
+  padding:40px;
+  box-sizing: border-box;
+  z-index: 999;
+ 
+}
 
-  #logo {
+ #logo {
     width: 50px;
 
     img {
       width: 100%;
     }
   }
-}
 
 header .main_nav ul {
   display: flex;
-  gap: 20px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  justify-content: space-between;
 
-  &li {
+
+  li {
     font-size: 14px;
     font-weight: 500;
+    padding: 0px 25px;
+  }
+}
+.main_nav,
+#logo{
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.navHamburg{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-color: $point-color;
+  border-radius: 5px;
+
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  
+}
+
+.navHamburg_box{
+  width: 40%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  
+
+  span{
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom:5px;
+  }
+}
+
+.navHamburg .navHamburg_box span:nth-child(3){
+  margin-bottom: 0px;
+}
+
+header.scrolled{
+  .main_nav,
+  #logo{
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  .navHamburg{
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
