--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -1,27 +1,220 @@
-@use "../base/variables" as *;
-
 .main {
   width: 100%;
   height: 100vh;
-  position: relative;
-}
-.main .main_textBox {
-  width: 100%;
-  text-align: center;
-  margin-top: 200px;
-  font-size: 120px;
-  font-weight: 600;
-  letter-spacing: -1px;
-  p {
-    .pointColor {
-      color: $point-color;
-    }
-  }
 
-  p {
-    &:nth-child(2),
-    &:nth-child(3) {
-      display: none;
+  &_textBox {
+    position: relative;
+    width: 100%;
+    height: 55%;
+    text-align: center;
+
+    p {
+      
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+
+      font-family: $font-main;
+      font-size: 8vw;
+      font-weight: bolder;
+
+      opacity: 0;
+      animation: slideUpFade 9s ease-in-out infinite;
+
+      .pointColor {
+        color: $point-color;
+      }
+
+      &:nth-child(1) {
+        animation-delay: 0s;
+      }
+
+      &:nth-child(2) {
+        animation-delay: 3s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 6s;
+      }
     }
   }
+}
+
+// text animation
+@keyframes slideUpFade {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  10% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  30% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  40% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+}
+
+.main_imgBox{
+  position: relative;
+  width: 100%;
+  margin-top: 20px;
+
+  > div{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .circle{
+    width: 320px;
+    height: 320px;
+    background: $point-color;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 0;
+  }
+  .character{
+    width: 200px;
+    height: 300px;
+    background-image: url(../../img/main/mainImg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 10;
+    top: 10px;
+    transform: translateX(-50%) scale(0.90); 
+    animation: emoji 2s steps(13) infinite;
+
+  }
+}
+
+@keyframes emoji{
+  from{
+    background-position: 0 0;
+  }
+  to{
+    background-position: -2600px 0;
+  }
+}
+
+// con01
+
+.about {
+  background-color: #fff;
+  border-radius: 80px 80px 0 0;
+  color: $bg-dark;
+}
+
+.about {
+  .aboutcontent {
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
+    top: 100px;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 200px;
+  }
+  .about_textBox {
+  font-size: 4vw;
+  letter-spacing: -1px;
+  font-family: $font-main;
+  line-height:130%;
+  padding-bottom: 40px;
+}
+  .about_favorite {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+}
+
+.favoriteText ul li{
+  padding: 0px 40px;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  color: $point-color;
+}
+
+.favoriteText ul li span{
+  margin-bottom: 40px;
+  font-weight: 500;
+  font-size: 140px;
+}
+.favoriteText li:nth-child(1) span{
+  margin-right: auto;   /* 왼쪽 */
+}
+
+.favoriteText li:nth-child(2) span{
+  margin-left: auto;    /* 오른쪽 */
+  margin-right: 20%;
+}
+
+.favoriteText li:nth-child(3) span{
+  margin-right: auto;   /* 왼쪽 */
+  margin-left: 20%;
+}
+
+.favoriteText li:nth-child(4) span{
+  margin-left: auto;    /* 오른쪽 */
+}
+.favorItem {
+  position: absolute;
+  inset: 0;  // top/right/bottom/left:0
+  display: flex;
+  flex-wrap: wrap;  
+  gap: 20px;
+}
+
+.favorItem .item {
+  border-radius: 50%;
+  border: 1px solid #000;
+  position: absolute;    
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.favorItem .a { width: 250px; height: 250px; }
+.favorItem .b { width: 190px; height: 190px; }
+.favorItem .c { width: 140px; height: 140px; }
+
+.favorItem .item:nth-child(1),
+.favorItem .item:nth-child(2),
+.favorItem .item:nth-child(3){
+  background-color: $point-color;
+  border: none;
+}
+.favorItem .item:nth-child(8),
+.favorItem .item:nth-child(5){
+  background-color: $bg-dark;
+  border: none;
+}
+
+.favorItem .item img {
+  width: 65%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.favorItem .item:nth-child(3) img,
+.favorItem .item:nth-child(5) img
+ {
+  width: 45%;
 }
