--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,9 +1,13 @@
 // color
-$bg-dark: #0b0b0b;
+$dark-color: #0b0b0b;
 $text-light: #ffffff;
 $point-color: #9bcb4f;
 
-
 /* font-family */
 $font-main: "Montserrat", sans-serif;
-$font-kr: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+$font-kr:
+  "Pretendard",
+  -apple-system,
+  BlinkMacSystemFont,
+  system-ui,
+  sans-serif;
