--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,5 +1,4 @@
 body {
-  background: $bg-dark;
   color: $text-light;
   font-family: $font-kr;
 }
@@ -8,7 +7,7 @@ body {
   margin: 0 auto;
   position: relative;
 }
-section{
+section {
   margin: 0 auto;
   position: relative;
   box-sizing: border-box;
@@ -17,4 +16,6 @@ a {
   color: $text-light;
 }
 
-
+.point {
+  color: $point-color;
+}
