--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -1,7 +1,9 @@
+/* =========================
+   MAIN
+========================= */
 .main {
   width: 100%;
   height: 100vh;
-  background-color: $dark-color;
 
   &_textBox {
     position: relative;
@@ -25,11 +27,9 @@
       &:nth-child(1) {
         animation-delay: 0s;
       }
-
       &:nth-child(2) {
         animation-delay: 3s;
       }
-
       &:nth-child(3) {
         animation-delay: 6s;
       }
@@ -37,7 +37,7 @@
   }
 }
 
-// text animation
+/* text animation */
 @keyframes slideUpFade {
   0% {
     opacity: 0;
@@ -71,6 +71,7 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
   .circle {
     width: 320px;
     height: 320px;
@@ -79,6 +80,7 @@
     position: absolute;
     z-index: 0;
   }
+
   .character {
     width: 200px;
     height: 300px;
@@ -101,19 +103,17 @@
   }
 }
 
-// con01
-
+/* =========================
+   ABOUT
+========================= */
 .about {
-  width: 80%;
   height: auto;
   background-color: #fff;
   border-radius: 80px 80px 0 0;
   color: $dark-color;
-}
 
-.about {
   .aboutcontent {
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     display: grid;
     row-gap: 10%;
@@ -125,25 +125,24 @@
 .about_textBox {
   box-sizing: border-box;
   padding: 10% 10% 10% 0px;
-}
-.about_textBox p {
-  font-size: 70px;
-  letter-spacing: -1px;
-  font-family: $font-main;
-  line-height: 1.2;
-  opacity: 0;
+
+  p {
+    font-size: 70px;
+    letter-spacing: -1px;
+    font-family: $font-main;
+    line-height: 1.2;
+    opacity: 0;
+  }
 }
 
-//   // about favorite 영역
-
+/* about favorite 영역 */
 .about_favorite {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   width: 100%;
   height: auto;
   position: relative;
-}
-.about_favorite {
+
   .favoriteBox {
     width: 90%;
     height: 90%;
@@ -156,72 +155,71 @@
 
 .favoriteText {
   position: relative;
-}
-.favoriteText ul {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  row-gap: 20px;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.favoriteText ul li {
-  display: flex;
-}
 
-.favoriteText ul li span {
-  font-weight: 500;
-  font-size: 130px;
-  color: $point-color;
-}
+  ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    row-gap: 20px;
+    flex-direction: column;
+    justify-content: space-between;
 
-.favoriteText ul li:nth-child(1) span {
-  margin-right: auto; /* 왼쪽 */
-}
+    li {
+      display: flex;
 
-.favoriteText ul li:nth-child(2) span {
-  margin-left: auto; /* 오른쪽 */
-  margin-right: 20%;
-}
+      span {
+        font-weight: 500;
+        font-size: 130px;
+        color: $point-color;
+      }
 
-.favoriteText ul li:nth-child(3) span {
-  margin-right: auto; /* 왼쪽 */
-  margin-left: 20%;
-}
-
-.favoriteText ul li:nth-child(4) span {
-  margin-left: auto; /* 오른쪽 */
+      &:nth-child(1) span {
+        margin-right: auto;
+      }
+      &:nth-child(2) span {
+        margin-left: auto;
+        margin-right: 20%;
+      }
+      &:nth-child(3) span {
+        margin-right: auto;
+        margin-left: 20%;
+      }
+      &:nth-child(4) span {
+        margin-left: auto;
+      }
+    }
+  }
 }
 
 .favoriteItem {
   position: absolute;
   inset: 0;
-}
 
-.favoriteItem {
   display: flex;
+
   .favoriteItem_l,
   .favoriteItem_r {
     width: 50%;
     height: 100%;
     position: relative;
   }
+
   .item {
-    position: absolute; // ✅ 자유 배치(겹치기)하려면 absolute 추천
+    position: absolute;
     border-radius: 50%;
     border: 1px solid #000;
     display: block;
+
+    img {
+      width: 65%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
-  .item img {
-    width: 65%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  //   // 사이즈: a/b/c (span에 같이 붙어있으니까 바로 먹음)
+  /* size */
   .a {
     width: 13vw;
     height: 13vw;
@@ -236,6 +234,7 @@
   }
 }
 
+/* 색상 */
 .favoriteItem_l .item:nth-child(3),
 .favoriteItem_r .item:nth-child(2) {
   background-color: $point-color;
@@ -248,6 +247,7 @@
   border: none;
 }
 
+/* 이미지 크기 커스텀 */
 .favoriteItem_l .item:nth-child(3) img {
   width: 45%;
 }
@@ -255,9 +255,8 @@
   width: 80%;
 }
 
-// about favoritem 위치
-
-// favoriteItem left
+/* about favoriteItem 위치 */
+/* left */
 .favoriteItem_l .item:nth-child(1) {
   top: 0%;
   right: 2%;
@@ -279,8 +278,7 @@
   right: 10%;
 }
 
-// right item
-
+/* right */
 .favoriteItem_r .item:nth-child(1) {
   top: -2%;
   right: 30%;
@@ -298,29 +296,29 @@
   right: 5%;
 }
 
-
-
-// video
+/* =========================
+   VIDEO
+========================= */
 .video {
-  width: 100%;
   height: auto;
   overflow: hidden;
+  background-color: #fff;
   padding-top: 100px;
-  
 }
-.about_circlebox{
+
+.about_circlebox {
   width: 100%;
-  height:300px;
+  height: 300px;
   position: relative;
   overflow: hidden;
-  
+
   .aboutcircle,
-  .abouttext{
+  .abouttext {
     position: absolute;
   }
-
 }
-.aboutcircle{
+
+.aboutcircle {
   width: 0px;
   height: 0px;
   border-radius: 50%;
@@ -329,27 +327,29 @@
   left: 50%;
   transform: translateX(-50%);
 }
-.abouttext{
+
+.abouttext {
   width: 100%;
-  top:40%;
+  top: 40%;
   color: #fff;
   text-align: center;
 
-  h3{
+  h3 {
     font-size: 2vw;
     padding-bottom: 20px;
   }
 }
+
 .videoWrap {
   width: 100%;
   height: 100vh;
-  background-color:$dark-color;
-    position: relative;
-
+  background-color: darkcyan;
+  position: relative;
 }
+
 .videoBox {
   width: 90%;
-  height: 90%;
+  height: 85%;
   border-radius: 40px;
   position: absolute;
   top: 0;
@@ -360,5 +360,27 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+
+/* =========================
+   SKILL
+========================= */
+.skill {
+  width: 100%;
+  height: 100vh;
+  background-color: $dark-color;
+
+  .skillbox {
+    width: 90%;
+    margin: 0 auto;
+    .skill_text {
+      padding-top: 100px;
+      h2 {
+        font-size: 40px;
+        font-family: $font-main;
+        font-weight: 600;
+      }
+    }
   }
 }
